# lxqt-sway

./: CMakeLists.txt  README.md
lxqt-config-sway/: CMakeLists.txt  lxqt-sway-get-config.sh  lxqt_sway.desktop  startlxqtsway.in  test.sh  yatbfw.json
lxqt-settings/: CMakeLists.txt  main.cpp
